syntax = "proto3";

package order;

option go_package = "gen/order;order";

message Order {
  string id = 1;
  string user_id = 2;
  string item_id = 3;
  int32 quantity = 4;
}

message CreateOrderRequest {
  string user_id = 1;
  string item_id = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}